# ptrace-idea

./: Cargo.toml  README.md
client/.cargo/: config.toml
client/src/: main.rs
crates/sys/: Cargo.toml
crates/sys/src/: call.rs  defs.rs  lib.rs
src/: init_seccomp.rs  lib.rs  main.rs
