[workspace]
members = ["client"]

[package]
name = "ptrace-idea"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
nix = { version = "0.29", features = [
    "fs",
    "personality",
    "process",
    "ptrace",
] }

[profile.dev]
panic = "abort"
lto = true
opt-level = "z"
codegen-units = 1

[profile.release]
panic = "abort"
lto = true
opt-level = "z"
codegen-units = 1
